@@ -3553,6 +3553,11 @@ the current area into an adjoining one.  The thief and group members will make \
 the trip in an environment free from the restrictions of law, geas, or spells, \
 and without being harassed by the local law or any other aggressive monsters.
 
+THIEF_UNDERWATER_SOUNDS=THIEF_UNDERWATERSSOUNDS
+UNDERWATER_SOUNDS=THIEF_UNDERWATERSSOUNDS
+THIEF_UNDERWATERSSOUNDS=<ABILITY>\
+Allows the player to use the Listen skill under water.
+
 SKILL_UPSTAGE=UPSTAGE
 UPSTAGE=<ABILITY>\
 Usage    : UPSTAGE\n\r\
@@ -3735,6 +3740,12 @@ WILDERNESS_LORE=<ABILITY>\
 Usage    : WLORE\n\r\
 Example  : wlore\n\r\
 Tells you what type of terrain you are presently in or on.
+
+THIEF_WILDERNESS_SOUNDS=THIEF_WILDERNESSSOUNDS
+WILDERNESS_SOUNDS=THIEF_WILDERNESSSOUNDS
+THIEF_WILDERNESSSOUNDS=<ABILITY>\
+Allows the player to use the Listen skill in outdoor areas \
+such as forests, plains, etc.
 
 WINGED_FLIGHT=WINGFLYING
 WINGFLYING=\
